# MNA_MLOps_Equipo12

./: .gitignore  Makefile  README.md  config  mlflow.db  pyproject.toml  src.dvc
data/processed/: dataset_tratado_20251011_235841.csv
docs/: mkdocs.yml
docs/docs/: index.md
entregables/: README.md
mlruns/741552859697097528/: meta.yaml
notebooks/: .gitignore  4_Data_Drift_Analysis.ipynb  4_Data_Drift_Analysis_sin_alibi.ipynb  Caravan_Notebook_ej.ipynb  Data_Drift_5.ipynb  InsuranceCompanyCaravanPrediction_V1.3.1.ipynb.dvc  InsuranceCompanyCaravanPrediction_V1.3.2.ipynb  InsuranceCompanyCaravanPrediction_V1.3.2.ipynb.dvc  InsuranceCompanyCaravanPrediction_V1.3.3.ipynb  InsuranceCompanyCaravanPrediction_V1.3.3.ipynb.dvc  InsuranceCompanyCaravanPrediction_V1.3.3.py  InsuranceCompanyCaravanPrediction_V1.4.ipynb.dvc  InsuranceCompanyCaravanPrediction_V1.4.py  InsuranceCompanyCaravanPrediction_V1.4_Pipelines_ES.ipynb  InsuranceCompanyCaravanPrediction_V1.ipynb.dvc  InsuranceCompanyCaravanPrediction_V1_MOD.ipynb  InsuranceCompanyCaravanPrediction_V1_MOD.ipynb.dvc  InsuranceCompanyCaravanPrediction_V2.0.ipynb  InsuranceCompanyCaravanPrediction_V2.1.ipynb  InsuranceCompanyCaravanPrediction_V2.2.ipynb  InsuranceCompanyCaravanPrediction_V2.3.ipynb  InsuranceCompanyCaravanPrediction_V2_2_refactor.ipynb  README.md  data_drifting_3.ipynb  requirements.txt
src/: data_preprocessing.py  main.py  model_training.py
src/data/: make_dataset_and_model.py
src/features/: feature_engineer.py
src/models/: h2o_trainer.py  upload_model_to_s3.py
tests/: test_model_training.py
(+501 files in other folders)
