[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Reproducibility"
version = "0.0.1"
description = "Repo for MLOPS for Insurance Project COIL 2000"
authors = [
  { name = "Team12_MLOPS" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["Reproducibility"]
force_sort_within_sections = true


